controls and import to dbb completed